--- a/index.html
+++ b/index.html
@@ -196,12 +196,11 @@
 
 
             <div class="d-flex  pb-5">
-              <div class="col-lg-6 col-12 col-sm-12 col-xs-12 order-2 d-flex justify-content-center"><img
-                  class="oferta" src="./oferta.jpg" /></div>
+           
 
               <br></br>
 
-            <div class="col-lg-6 col-12 col-sm-12 col-xs-12 col-12 col-sm-12 order-1">
+            <div class="col-lg-6 col-12 col-sm-12 col-xs-12 col-12 col-sm-12 ">
 
               <div class="p-5 cuadroOferta">
 
@@ -233,7 +232,8 @@
             </div>
 
 
-
+   <div class="col-lg-6 col-12 col-sm-12 col-xs-12  d-flex justify-content-center"><img
+                  class="oferta" src="./oferta.jpg" /></div>
           </div>
 
 
