--- a/2.html
+++ b/2.html
@@ -65,7 +65,7 @@
 
       <div class="col-lg-6 mt-5 d-flex justify-content-center flex-column
         software3 p-5">
-        <div class="pl-5">
+        <div class="pl-5 mt-5">
           <h2 class="formulario">TABLET REACONDICIONADO</h2>
           <h3 class="text-white">INCLUYE SOPORTE AJUSTABLE</h3>
           <p style="font-size: larger; font-weight: 600;">El centro de la TPV,
